<resources>
    <string name="app_name">SimpleSurveyCreator</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surveylist1">Popular Templates</string>
    <string name="surveylist2">Research/Academic</string>
    <string name="surveylist3">Customer Feedback</string>
    <string name="surveylist4">Delivery Feedback</string>
    <string name="surveylist5">Retails</string>
    <string name="surveylist6">Health Care</string>
    <string name="surveylist7">Events</string>
    <string name="surveylist8">General Businesses</string>
    <string name="submitbtn">Save</string>
    <string name="saveandsharebtn">Save and Share</string>
    <string name="sharebtn">Share</string>
    <string name="deletebtn">Delete</string>
    <string name="hed1">Customer Feedback For  Inventory</string>
    <string name="sq1">Sample Question 1</string>
    <string name="sq2">Sample Question 2</string>
    <string name="sq3">Sample Question 3</string>
    <string name="sq4">Sample Question 4</string>
    <string name="sq5">Sample Question 5</string>
    <string name="addbt">Add</string>
    <string name="papullerlist">Popular Survey Template List</string>
    <string name="closeicon">X</string>
    <string name="deletmsg">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nomsg">NO</string>
    <string name="yesmsh">Yes</string>
    <string name="choosetempletebtn">Select Template</string>
    <string name="selectbtn">Select Templete</string>
    <string name="populerlist">Popular Templates</string>
    <string name="populertemlist">Popular templates</string>
    <string name="populerlisttitl">Popular Templates</string>
    <string name="sharesurvey">Share Survey</string>
    <string name="surveyname">Enter Survey Name   :</string>
    <string name="surveyhint">Survey Name</string>
    <string name="okbtn">OK</string>
    <string name="sharewith">Share With.....</string>
    <string name="facebook">Facebook</string>
    <string name="gmaill">Gmail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="moreoption">More</string>
    <string name="surveylink">https://Suuvey.crest.app</string>
    <string name="sendvivatext">Send Via Text</string>
    <string name="sendvivatelegram">Send Via Telegram</string>
    <string name="sendviatwitter">Send Viva Twitter</string>
    <string name="sendvialinkin">Send Via LinkdIn</string>
    <string name="sendviaotherplatform">Send Via Other Platforms</string>
    <string name="shareqrcode">Share QR Code</string>
    <string name="savebtnt">Save</string>
    <string name="whatsapp2">WhatsApp</string>
    <string name="chatlb">CHATS</string>
    <string name="whatsplb">WhatsApp</string>
    <string name="wtsplb3">WhatsApp</string>
    <string name="whtsappls7">WhatsApp</string>
    <string name="sendmdgsuusfully">Send Successfully</string>
    <string name="sucmsg">Successfully Send !</string>
    <string name="backbtn">Back</string>
    <string name="exitbtn">Exit</string>
    <string name="cutermerfeedback">Customer Feedback</string>
    <string name="cusq1">1.How often do you use our product?</string>
    <string name="q1an1">Regularly</string>
    <string name="q2a2">Once in while</string>
    <string name="q1a3">Never</string>
    <string name="cusq2">Which feature you like the most in our product?</string>
    <string name="custerq2">2.Which feature you like the most in our product?</string>
    <string name="cusq2a">Various types of surveys</string>
    <string name="qq2a2">Multilingual</string>
    <string name="qq2a3">Design</string>
    <string name="babtn"><![CDATA[<]]></string>
    <string name="bacbtn"><![CDATA[>]]></string>
    <string name="cusq3">3.How would you rate the value for money of the product?</string>
    <string name="q3aa1">Bad</string>
    <string name="q3aa2">Regular</string>
    <string name="q3a3">Good</string>
    <string name="temmenu">"      Customer Feedback"</string>
    <string name="cq1">"      1.How often do you use our product?"</string>
    <string name="custemq1">"   1.How often do you use our product?"</string>
    <string name="cusq22">"   2.Which feature you like the most in our product?"</string>
    <string name="custemq33">"   3.How would you rate the value for money of the "</string>
    <string name="custemq333">"     product? "</string>
    <string name="custemq3">"   3.How would you rate the value for money of the product?"</string>
    <string name="tem2q1">"   4.How would you rate value for money of the product?"</string>
    <string name="qes4">"   4.How would you rate the value for money of the product?"</string>
    <string name="newqes444">"   4.How would you rate the value for money of the "</string>
    <string name="newqes44">"     product? "</string>
    <string name="qestion4">"   4.How "</string>
    <string name="bad">Bad</string>
    <string name="reguler">Regular</string>
    <string name="goodl">Good</string>
    <string name="qestion5">"   5.How useful our product was for you?"</string>
    <string name="veryuseful">Very useful</string>
    <string name="somewhatuseful">Somewhat useful</string>
    <string name="notatallusefull">Not at all useful</string>
    <string name="question6">"   6.Would you see our product in future again?"</string>
    <string name="ayes">Yes</string>
    <string name="ano">No</string>
    <string name="confused">Confused</string>
    <string name="question7">"   7.How easy is to navigate to our website?"</string>
    <string name="difficultd">Difficult</string>
    <string name="veryeassy">Very easy</string>
    <string name="regulard">Regular</string>
    <string name="question8">"   8.How much effort did you have to put forth while working with our product?"</string>
    <string name="question81">"   8.How much effort did you have to put forth while"</string>
    <string name="question82">"      working with our product?"</string>
    <string name="morethanespect">More than expected</string>
    <string name="asmuchasexpt">As much as expected</string>
    <string name="muchlessthanexpected">Much less than expected</string>
    <string name="que9">"   9.Would you be to recommend our product to a friend or colleague?"</string>
    <string name="que91">"   9.Would you be to recommend our product to a friend "</string>
    <string name="que92">"     or colleague?"</string>
    <string name="q9a1">Absolutely</string>
    <string name="naverl">Naver</string>
    <string name="possibly">Possibly</string>
    <string name="que10">"   10.How could we improve our product to better meet your needs?"</string>
    <string name="que101">"   10.How could we improve our product to better"</string>
    <string name="que102">"      meet your needs?"</string>
    <string name="enterq">Your answer here</string>
    <string name="save4">Save</string>
    <string name="share4">Share</string>
    <string name="delete4">Delete</string>
    <string name="successfuldelete">Successfuly Delete !</string>

    <string name="surveyman">surveyMan</string>
    <string name="blank_survey">Blank Survey</string>
    <string name="choose_from_template">choose from template</string>
    <string name="view">View</string>
    <string name="okbtn7">OK</string>
    <string name="back78">Back</string>
    <string name="exiy">Exit</string>
    <string name="writeyouanswe">    Write Your answere here</string>
    <string name="savemsg">Successfuly Saved !</string>
    <string name="newq1">4.How would you rate value for money of the      product?</string>
    <string name="newqq3">3.How would you rate the value for money of the      product?</string>
    <string name="new3q3">"   3.How would you rate the value for money of the      product?"</string>
    <string name="recent_activities">Recent activities</string>
    <string name="app_popup_close_icon">X</string>
    <string name="enter_survey_name">Enter survey name</string>
    <string name="survey_popup_hint">Start with a black survey project and build it to suit you needs</string>
    <string name="cancel">Cancel</string>
    <string name="get_started">Get started</string>
    <string name="Reportbtn" />
    <string name="repotbtnmain">Get Report</string>
    <string name="analysis">Analysis</string>
    <string name="selecttemplate">"-------------------- Select Survey -------------------- "</string>
    <string name="repotd">Reports</string>
    <string name="response">Responses</string>
    <string name="reptanalz">Report Analysis</string>
    <string name="topicrept">Customer Feedback</string>
    <string name="barchat">Bar Chart</string>
    <string name="piechart">Pie Chart</string>
    <string name="linechart">Line Chart</string>
    <string name="columncht">Column Chart</string>
    <string name="otherreqst">Request New</string>
    <string name="Responsecollected">Response Collected</string>
    <string name="surveystatus">Survey Status</string>
    <string name="createdon">Created On</string>
    <string name="updaeon">Updated On</string>
    <string name="county">40</string>
    <string name="statusactive">Active</string>
    <string name="createddateo">29/07/20202</string>
    <string name="updatedater">17/08/2020</string>
    <string name="upadtedater">17/08/2020</string>
    <string name="barchart2">Bar Chart</string>
    <string name="cusmrtfeebak">Customer Feedback</string>
    <string name="responall">"Customer Feedback  - Responses  for All Questions "</string>
    <string name="points">.</string>

    <string name="qqq1">Question 1</string>
    <string name="qqq2">Question 2</string>
    <string name="qqq3">Question 3</string>
    <string name="qqq4">Question 4</string>
    <string name="qqq5">Question 5</string>
    <string name="qqq6">Question 6</string>
    <string name="qqq7">Question 7</string>
    <string name="qqq8">Question 8</string>
    <string name="qqq9">Question 9</string>
    <string name="qqq10">Question 10</string>
    <string name="Cloumchatr">Column Chart</string>
    <string name="topiclinechart">Line Chart</string>
    <string name="barcht">Bar Chart</string>
    <string name="requestner">Request New</string>
    <string name="Suggestnewchart">Suggest new chart you want?</string>
    <string name="saven">Save</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="EmployeefeedbackForm">Employee Feedback Form</string>
    <string name="Creaton29">Create On : 2020/07/12</string>
    <string name="producysurvey">Product Survey</string>
    <string name="createon78">Create On : 2020/08/17</string>
    <string name="cusmrfedbck">Customer Feedback</string>
    <string name="createon7890">2020/10/12</string>
    <string name="previewsurveylist">Preview Survey List</string>
    <string name="eEmployeefeedbackForm">Employee Feedback Form</string>
    <string name="create786">Create On : 2020/07/12</string>
    <string name="eproducysurvey">Product Survey</string>
    <string name="createon89">Create On : 2020/08/23</string>
    <string name="activate_your_survey">Activate your survey</string>
    <string name="inactive">Inactive</string>
    <string name="title">Title</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="active_and_publish">Active and Publish</string>
    <string name="save_and_edit">Save and Edit</string>
    <string name="wrirteanwer">"     Write your answere here..."</string>
</resources>