<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.customerfeedback3">


        <LinearLayout
            android:layout_width="417dp"
            android:layout_height="669dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="61dp"

            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="430dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="27dp" />

                        <TextView
                            android:id="@+id/textView20234"
                            android:layout_width="match_parent"
                            android:layout_height="39dp"
                            android:text="@string/temmenu"
                            android:textColor="@color/Black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/tep1opt1btn"
                        android:layout_width="119dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/moreic" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView17234"
                        android:layout_width="742dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/question7"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/tep1opt2btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/moreic" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/radioButton234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficultd" />

                <RadioButton
                    android:id="@+id/radioButton2234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/veryeassy" />

                <RadioButton
                    android:id="@+id/radioButton3234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/regulard" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView18234"
                            android:layout_width="749dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/question8"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/tep1opt3btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/moreic" />
                    </LinearLayout>
                </LinearLayout>

                <RadioButton
                    android:id="@+id/radioButton5234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/morethanespect" />

                <RadioButton
                    android:id="@+id/radioButton6234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asmuchasexpt" />

                <RadioButton
                    android:id="@+id/radioButton7234"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/muchlessthanexpected" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView19234"
                            android:layout_width="732dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/que9"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/tep1opt4btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/moreic" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioButton8234"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/q9a1" />

                    <RadioButton
                        android:id="@+id/radioButton9234"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/naverl" />

                    <RadioButton
                        android:id="@+id/radioButton10234"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/possibly" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="193dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/tepcus3bt1"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shapelist"
                        android:text="@string/babtn"
                        android:textColor="@color/Black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="41dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/custemb2"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/shapelist"
                        android:text="@string/bacbtn"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>