<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.successfulysendmsg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="343dp"
        android:layout_height="111dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="34dp"
        android:text="@string/sucmsg"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sucbackbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/shapelist"
        android:text="@string/backbtn"
        app:layout_constraintEnd_toStartOf="@+id/sucexitbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/sucexitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/shape_button"
        android:text="@string/exitbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sucbackbtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="188dp"
        android:layout_height="168dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/suc1" />
</androidx.constraintlayout.widget.ConstraintLayout>